public/assets/frontend/css/main.css
/* ... */
.navbar .dropdown-menu .dropdown-item,
.bg-dark .dropdown-menu .dropdown-item {
    font-size: 1.5rem !important;
    color: #103f29 !important;
}

.administrator-right {
    position: absolute;
    top: 1rem;
    right: 5px;
}

@media only screen and (max-width: 768px) {
    .administrator-right {
        position: relative;
        top: 0;
        right: 0;
    }
}

.hide-small-md{
    display: none !important;
}

.landing-footer {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
}

.landing-footer-info {
    background-color: #006535;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    padding: 8rem 0 8rem 0;
}

.footer-info-content {
    padding: 6rem;
    color: #fff;
}

.landing-footer-text {
    background-color: #fff;
    padding: 1rem 4rem;
}

.landing-footer-text span {
    color: #484b74;
    padding-right: 4rem;
}

.landing-footer-text img {
    vertical-align: bottom !important;
}

.footer-content-section {
    padding-bottom: 6rem;
}

.footer-info-content-header {
    font-size: 18px;
    padding-bottom: 1rem;
}

.footer-info-content-text {
    font-size: 14px;
    color: #e5f9f5;
}

.fee-table-container {
    text-align: -webkit-right;
}

.fee-calc-header {
    font-size: 24px;
    color: #4f4f4f;
}

.fee-calc-subh {
    color: #274c36;
    font-size: 16px;
}

.fee-calc-table {
    width: 100% !important;
    margin-top: 7rem;
    font-size: 1.5rem;
    color: #173c49;
}

.fee-calc-container {
    padding-bottom: 8rem;
}

.fee-calc-form {
    color: #103f29 !important;
}

.form-no-bg {
    background: #fff !important;
    border: 1px solid #028090 !important;
}

.fee-calc-form-group {
    margin-left: -4% !important;
}

.publication-container {
    padding-top: 5rem;
    padding-bottom: 10rem;
}

.publication-img img {
    width: 100% !important;
}

.publication-header h3 {
    color: #000;
    font-size: 18px;
    padding: 1rem 0;
}

.publication-content p {
    color: #4f4f4f;
    font-size: 14px;
}

.read-more-content p {
    margin-top: 2rem;
    width: 95%;
}

.publications-header {
    font-size: 24px;
    color: #000;
    text-align: center;
}

.read-more-link {
    color: #006535;
    text-decoration: underline;
    font-size: 1.2rem;
    padding-bottom: 2rem;
}

.read-more-img-sm img {
    width: 100% !important;
}

.read-more-main-img img {
    width: 100% !important;
}

.faq-card {
    background: #f1fdfa;
    border: 1px solid rgba(50, 249, 206, 0.096);
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    border-radius: 8px;
    padding: 2rem;
    margin-bottom: 4rem;
    -webkit-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
}

.faq-card:hover {
    -webkit-transform: translateX(1rem);
    transform: translateX(1rem);
}

.faq-header {
    color: #4f4f4f;
    font-size: 2rem;
    margin-bottom: 1rem;
}

.faq-content {
    font-size: 1.4rem;
    color: #4f4f4f;
}

.faq-content-header {
    color: #4f4f4f;
    font-size: 18px;
}

.faq-content-header span {
    color: #807b7b70;
}

.faq-questions__ul {
    font-size: 16px;
    color: #4f4f4f;
}

.faq-questions__ul .faq-questions__li {
    list-style: none;
    margin: 1.5rem 0;
}

.faq-questions__ul .faq-questions__li .faq-questions__a {
    width: 100% !important;
    height: auto !important;
    display: block;
    padding: 1rem 2rem;
    margin: 0.5rem;
    font-size: 1.5rem;
    color: #4f4f4f;
}

.faq-questions__ul .faq-questions__li .faq-questions__a:hover {
    color: #fff;
    background: #006535;
    border-radius: 0.6rem;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}

.faq-questions__ul .faq-questions__li .faq-questions__a__active {

    color: #fff;
    background: #006535;
    border-radius: 0.6rem;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
    box-shadow: 0px 5px 15px rgba(106, 127, 130, 0.09);
}

.faq-answer-header {
    font-size: 18px;
    color: #4f4f4f;
}

.faq-answer-content {
    font-size: 16px;
    margin-top: 2rem;
    margin-bottom: 4rem;
}

.like-article {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-top: 1rem;
    justify-content: center;
}

.like-article-section {
    margin-right: 7rem;
}

.like-article-section img {
    vertical-align: sub !important;
}

.like-article-yes {
    color: #1f877a;
    font-size: 18px;
}

.like-article-no {
    color: #e76f51;
    font-size: 18px;
}

/*# sourceMappingURL=main.css.map */

.sub-title {
    padding: 2rem 0;
    font-size: 1.5rem;
}

.push-top{
    margin-top: -200px;
}

